--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
 </head>
 
 <body>
+    <header>
+        <nav class="container-lg navbar navbar-light bg-light rounded mt-3">
+            <div class="container-fluid">
+              <a class="navbar-brand fs-2"><span class="fw-bold">Interactive</span><br>Geometry Genius</a>
+              <button class="btn btn-primary fw-bold px-4">Blog</button>
+            </div>
+          </nav>
+    </header>
+
     <main>
         <div class="container-lg">
-            <div class="d-flex mt-3 mb-5">
+            <div class="d-flex mt-5 mb-5">
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
                         <div class="card">
