--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </header>
 
     <main>
-        <div class="container-lg">
-            <div class="d-flex mt-5 mb-5">
-                <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="container-xxl">
+            <div class="d-flex flex-column mt-5 mb-5">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xxl-4 g-4">
                     <div class="col">
                         <div class="card">
                             <img src="./images/triangle.png" class="card-img-top p-5" alt="There is image of triangle.">
@@ -86,6 +86,12 @@
                                     <button class="btn btn-primary w-100 mx-auto fs-4 fw-bolder py-2">Calculate</button>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+
+                    <div class="col d-none d-xxl-block">
+                        <div class="card">
+                            <h5 class="text-center pt-3"><u>Calculation Area</u></h5>
                         </div>
                     </div>
     
@@ -154,7 +160,15 @@
                             </div>
                         </div>
                     </div>
-                  </div>
+                </div>
+
+                <div class="d-flex mx-auto mt-4">
+                    <div class="col d-xxl-none">
+                        <div class="card">
+                            <h5 class="text-center pt-3 px-5"><u>Calculation Area</u></h5>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
