Added calculateAreaAndDisplay.js file.

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                 <div class="d-flex d-xxl-none mx-auto mt-4">
                     <div class="col">
-                        <div id="calculation-area2" class="card">
+                        <div id="calculation-area" class="card">
                             <h5 class="text-center pt-3 px-5"><u>Calculation Area</u></h5>
                         </div>
                     </div>
