Added createNewSection function in calculateAreaAndDisplay.js file.

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                 <div class="d-flex d-xxl-none mx-auto mt-4">
                     <div class="col">
-                        <div id="calculation-area" class="card">
+                        <div id="calculation-area2" class="card">
                             <h5 class="text-center pt-3 px-5"><u>Calculation Area</u></h5>
                         </div>
                     </div>
@@ -176,6 +176,6 @@
     <!-- bootstrap js cdn -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- js flie -->
-    <script src="./js/calculator.js"></script>
+    <script src="./js/calculateAreaAndDisplay.js"></script>
 </body>
 </html>
