Added redesigned calculation area.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <main>
         <div class="container-xxl">
-            <div class="d-flex flex-column mt-5 mb-5">
-                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xxl-4 g-4">
+            <div class="d-flex flex-column flex-xxl-row mt-5 mb-5">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                     <div class="col">
                         <div class="card">
                             <img src="./images/triangle.png" class="card-img-top p-5" alt="There is image of triangle.">
@@ -86,12 +86,6 @@
                                     <button id="parallelogram-area-cal-btn" class="btn btn-primary w-100 mx-auto fs-4 fw-bolder py-2">Calculate</button>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-
-                    <div class="col d-none d-xxl-block">
-                        <div id="calculation-area" class="card">
-                            <h5 class="text-center pt-3"><u>Calculation Area</u></h5>
                         </div>
                     </div>
     
@@ -162,11 +156,9 @@
                     </div>
                 </div>
 
-                <div class="d-flex d-xxl-none mx-auto mt-4">
-                    <div class="col">
-                        <div id="calculation-area2" class="card">
-                            <h5 class="text-center pt-3 px-5"><u>Calculation Area</u></h5>
-                        </div>
+                <div class="w-100 ms-xxl-4 mt-4 mt-xxl-0">
+                    <div id="calculation-area" class="card">
+                        <h5 class="text-center pt-3"><u>Calculation Area</u></h5>
                     </div>
                 </div>
             </div>
