Added validation code.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="container-lg navbar navbar-light bg-light rounded mt-3">
             <div class="container-fluid">
               <a class="navbar-brand fs-2"><span class="fw-bold">Interactive</span><br>Geometry Genius</a>
-              <button class="btn btn-primary fw-bold px-4">Blog</button>
+              <button id="blog-btn" class="btn btn-primary fw-bold px-4">Blog</button>
             </div>
           </nav>
     </header>
