--- a/blog.html
+++ b/blog.html
@@ -8,11 +8,35 @@
     <!-- bootstrap css cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
     <header>
-        <h1 class="text-primary text-center mt-4 fw-bold">Blog</h1>
+        <h1 class="text-primary text-center mt-4 mb-5 fw-bold">Blog</h1>
     </header>
 
+    <main>
+        <div>
+            <h4 class="ms-4">What is a DOM and what is a purpose of DOM?</h4>
+            <p class="ms-4 mb-4">Ans. The Document Object Model (DOM) is the model which provide us way to interact with web pages. The main purpose of DOM is to make website dynamic so that we can interact with website.</p>
+        </div>
+
+        <div>
+            <h4 class="ms-4">How will you select HTML elements using DOM? Write the name of DOM methods for selecting HTML elements.</h4>
+            <p class="ms-4 mb-4">Ans. We can select HTML elements by tag name, id, class name, querySelector and querySelectorAll using DOM. Example:<br>1. getElementsByTagName('h1'),<br>2. getElementsByClassName('class-name'),<br>3. getElementById('id'),<br>4. querySelector('tag-name or #id or .class-name'),<br>5. querySelectorAll('tag-name or #id or .class-name div')</p>
+            
+            <p class="ms-4 mb-4">The name of DOM methods for selecting HTML elements are <br>1. getElementsByTagName(),<br>2. getElementsByClassName(),<br>3. getElementById(),<br>4. querySelector() and<br>5. querySelectorAll()</p>
+        </div>
+
+        <div>
+            <h4 class="ms-4">What is event bubbling?</h4>
+            <p class="ms-4 mb-4">Ans. The event bubbling is a concept in the DOM. When the event happen in the child html elements,  the child html elements parse the event in his parent html elements. This processing known as event bubbling in DOM.</p>
+        </div>
+
+        <div>
+            <h4 class="ms-4">What is a callback function and why will you use it?</h4>
+            <p class="ms-4">When a function is called by inside of another function or parse as a argument is called callback function.<br>I will use callback function when I need to do another a operation before completing a operation.</p>
+        </div>
+    </main>
     <!-- bootstrap js cdn -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
