--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="container">
     <header>
         <h1 class="text-primary text-center mt-4 mb-5 fw-bold">Blog</h1>
     </header>
@@ -37,6 +37,7 @@
             <p class="ms-4">When a function is called by inside of another function or parse as a argument is called callback function.<br>I will use callback function when I need to do another a operation before completing a operation.</p>
         </div>
     </main>
+    
     <!-- bootstrap js cdn -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
