Added modified calculation area.

--- a/index.html
+++ b/index.html
@@ -157,8 +157,10 @@
                 </div>
 
                 <div class="w-100 ms-xxl-4 mt-4 mt-xxl-0">
-                    <div id="calculation-area" class="card">
-                        <h5 class="text-center pt-3"><u>Calculation Area</u></h5>
+                    <div class="card">
+                        <div id="calculation-area" class="container" >
+                            <h5 class="text-center pt-3 mb-4"><u>Calculation Area</u></h5>
+                        </div>
                     </div>
                 </div>
             </div>
