--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,7 @@
     </header>
 
     <main>
+        <!-- FAQ section start here -->
         <div>
             <h4 class="ms-4">What is a DOM and what is a purpose of DOM?</h4>
             <p class="ms-4 mb-4">Ans. The Document Object Model (DOM) is the model which provide us way to interact with web pages. The main purpose of DOM is to make website dynamic so that we can interact with website.</p>
@@ -36,6 +37,7 @@
             <h4 class="ms-4">What is a callback function and why will you use it?</h4>
             <p class="ms-4">When a function is called by inside of another function or parse as a argument is called callback function.<br>I will use callback function when I need to do another a operation before completing a operation.</p>
         </div>
+        <!-- FAQ section end here -->
     </main>
     
     <!-- bootstrap js cdn -->
