--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <nav class="container-lg navbar navbar-light bg-light rounded mt-3">
+        <nav class="container-xxl navbar navbar-light bg-light rounded mt-3">
             <div class="container-fluid">
               <a class="navbar-brand fs-2"><span class="fw-bold">Interactive</span><br>Geometry Genius</a>
               <button id="blog-btn" class="btn btn-primary fw-bold px-4">Blog</button>
